# witdog_ros

./: .gitignore  README.md  blocks.js  button_style.css  toolbox_style.css
Maixpy_Code/: expression.py  face_recognition.py  mask_recognition.py  qrcode.py
Maixpy_Firmware/: README.md
Maixpy_Model/: 0x300000_FaceDetection.smodel  0x400000_FaceLandmarkDetection.smodel  0x500000_FeatureExtraction.smodel  0x600000_MaskRecognition.smodel
blockly/: custom_category.js  index.html  index.js  main.js
servo_interface/: CMakeLists.txt  package.xml
servo_interface/launch/: calibrate.launch  servo_interface.launch
servo_interface/scripts/: calibrate.py  closeport.py  servo_interface.py
witdog_config/: CMakeLists.txt  README.md  config.json  package.xml
witdog_config/include/: gait_config.h  quadruped_description.h
witdog_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
witdog_description/: CMakeLists.txt  package.xml  readme.md
witdog_description/config/: joint_names_witdog_description.yaml
witdog_description/launch/: display.launch  gazebo.launch
witdog_description/meshes/: lf_2.STL  lf_3.STL  lf_foot.STL  lh_2.STL  lh_3.STL  lh_foot.STL  rf_2.STL  rf_3.STL  rf_foot.STL  rh_2.STL  rh_3.STL  rh_foot.STL
witdog_functions/: CMakeLists.txt  README.md  package.xml
witdog_functions/launch/: dance.launch
witdog_functions/scripts/: dance.py  pose_controller.py
witdog_functions/scripts/dance_actions/: dance_example0.json
witdog_functions/scripts/dance_demo/: dance_demo1.py
(+21 files in other folders)
