<?xml version="1.0"?>
<package format="2">
  <name>witdog_functions</name>
  <version>0.1.0</version>
  <description>witdog_functions Package</description>

  <maintainer email="zgchen33@gmail.com">zgchen</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>